feat: add new exceptions and errors handling.